k8s/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: felhoalapu-elosztott-rendszerek-laboratorium
  namespace: django-iac
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/vcs-uri: 'https://github.com/borpatika/Felhoalapu-elosztott-rendszerek-laboratorium'
  labels:
    app: felhoalapu-elosztott-rendszerek-laboratorium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: felhoalapu-elosztott-rendszerek-laboratorium
  template:
    metadata:
      labels:
        app: felhoalapu-elosztott-rendszerek-laboratorium
        deployment: felhoalapu-elosztott-rendszerek-laboratorium
    spec:
      volumes:
        - name: media-storage
          persistentVolumeClaim:
            claimName: media-pvc
      containers:
        - name: felhoalapu-elosztott-rendszerek-laboratorium
          image: image-registry.openshift-image-registry.svc:5000/django-iac/felhoalapu-elosztott-rendszerek-laboratorium:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 512Mi
          volumeMounts:
            - name: media-storage
              mountPath: /app/media
          imagePullPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
